--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -1,20 +1,29 @@
-name: Build & deploy
-
-on:
-  push:
-    branches:
-      - main
-
+name: Example workflow for S3 Deploy
+on: [push]
 jobs:
-  deploy:
+  run:
     runs-on: ubuntu-latest
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     steps:
-    - uses: actions/checkout@v2
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id:${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key:${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      aws-region: eu-west-2
-    - name: Deploy
-      run: aws s3 sync ./src s3://www.haslamdoggycare.co.uk
+        - uses: actions/checkout@v3
+
+        - name: Install dependencies
+          run: yarn
+
+        - name: Build
+          run: yarn build
+
+        - name: Deploy
+          uses: reggionick/s3-deploy@v3
+          with:
+            folder: build
+            bucket: www.haslamdoggycare.co.uk
+            bucket-region: eu-west-2
+            # dist-id: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}
+            # invalidation: /
+            delete-removed: true
+            no-cache: true
+            private: true
+            filesToInclude: "/src/*"
