--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -8,6 +8,8 @@ jobs:
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     steps:
         - uses: actions/checkout@v3
+        - name: S3 Deploy
+          uses: Reggionick/s3-deploy@v3.2.0
         - name: Deploy
           uses: reggionick/s3-deploy@v3
           with:
